<resources>
    <string name="app_name">Keuangan Desa Krebet</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="alamatKrebet">Desa Wisata Krebet RT. 04, Sendangsari, Pajangan, Krebet, Sendangsari,
                Kecamatan Pajangan, Kabupaten Bantul, Daerah Istimewa Yogyakarta 55751</string>
    <string name="beranda">Beranda</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="laporan">Laporan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saldo">Saldo</string>
    <string name="saldo1">-.---.---</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="saldo2">-.---.---</string>
    <string name="semua">Semua</string>
    <string name="pengunjung_a">Pengunjung A</string>
    <string name="tanggal">24 April 2024</string>
    <string name="pengajar_tari">Pengajar Tari</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="tambah">Tambah</string>
    <string name="smkn_2_yogyakarta">SMKN 2 Yogyakarta</string>
    <string name="bulanan">Bulanan</string>
    <string name="tahunan">Tahunan</string>
    <string name="pengunjung">Pengunjung</string>
    <string name="bulanthn">April 2023</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="nama_instansi">Nama Instansi</string>
    <string name="tgl">Tanggal Transaksi</string>
    <string name="jumlah">Jumlah</string>
    <string name="catatan">Catatan</string>
    <string name="total">Total</string>
    <string name="bukti_transaksi">Bukti Transaksi</string>
    <string name="upload">Upload</string>
    <string name="alamat">Alamat</string>
    <string name="tambah_transaksi_pengeluaran">Tambah Transaksi Pengeluaran</string>
    <string name="tambah_transaksi_pemasukan">Tambah Transaksi Pemasukan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="profil">Profil</string>
    <string name="admin_1">Admin 1</string>
    <string name="logout">Logout</string>
    <string name="keluar">Keluar</string>
    <string name="reset_password">Reset Password</string>
    <string name="input_nama_pengunjung">Input Nama Pengunjung</string>
    <string name="tambah_pemasukan">Tambah pemasukan</string>
    <string name="tambah_pengeluaran">Tambah pengeluaran</string>
    <string name="tambah_nama_pengunjung">Tambah Nama Pengunjung</string>
    <string name="nominal_rp">Nominal (Rp)</string>
    <string name="nama_pengunjung">Nama Pengunjung</string>
    <string name="laporan_arus_kas">Laporan Arus Kas</string>
    <string name="laporan_laba_rugi">Laporan Laba Rugi</string>
    <string name="jurnal_transaksi">Jurnal Transaksi</string>
    <string name="thn">2023</string>
    <string name="nominal">Nominal</string>
    <string name="detail_pengunjung">Detail Pengunjung</string>
    <string name="hapus">Hapus</string>
    <string name="ubah_data_pemasukan">Ubah Data Pemasukan</string>
    <string name="ubah_data_pengeluaran">Ubah Data Pengeluaran</string>
    <string name="edit_data_pengunjung">Edit Data Pengunjung</string>
    <string name="nama_cp">Nama CP</string>
    <string name="id_pengunjung">Id Pengunjung</string>
    <string name="tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="dp">DP</string>
    <string name="id_pemasukan">Id Pemasukan</string>
    <string name="cari_nama_disini">Cari Nama Disini</string>
</resources>