<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    tools:context=".ui.pengunjung.EditPengunjungFragment">

    <ImageButton
        android:id="@+id/btnKembali"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/white"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/blackTextTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnKembali"
        android:gravity="center"
        android:text="@string/edit_data_pengunjung"
        app:layout_constraintBottom_toBottomOf="@+id/btnKembali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnKembali" />

    <TextView
        android:id="@+id/idPengunjung"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/outlined_rectangle_grey"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/id_pengunjung"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNamaCp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPengunjung"
        app:startIconDrawable="@drawable/ic_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaCp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_cp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNoTelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNamaCp"
        app:startIconDrawable="@drawable/ic_call">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor_telepon"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNoTelp"
        app:startIconDrawable="@drawable/ic_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaInstansi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_instansi"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNama"
        app:startIconDrawable="@drawable/ic_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnTanggal"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/outlined_rectangle_grey"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/tgl"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAlamat" />

    <TextView
        android:id="@+id/btnTanggalAcara"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/outlined_rectangle_grey"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/tanggal_pelaksanaan"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTanggal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNominal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTanggalAcara"
        app:startIconDrawable="@drawable/ic_calculator">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dp"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnHapus"
        style="@style/whiteTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_btn"
        android:text="@string/hapus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSimpan"
        style="@style/whiteTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_btn"
        android:text="@string/simpan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>