<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".PenTahunanFragment">

    <LinearLayout
        android:id="@+id/layoutMenu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <Button
            style="@style/whiteTextBtn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/style_btn2"
            android:text="@string/pengunjung" />

        <Button
            style="@style/blue1TextBtn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/style_btn_outline"
            android:text="@string/bulanan" />

        <Button
            style="@style/blue1TextBtn"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/style_btn2"
            android:text="@string/tahunan" />

    </LinearLayout>

    <Button
        android:id="@+id/btnTambah"
        style="@style/blackTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/style_btn"
        android:text="@string/tambah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutMenu2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTambah">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/blackTextTitle2"
            android:layout_gravity="center"
            android:text="@string/tahun" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/card_bulan"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>