<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".DetailTransaksiFragment">

    <ImageButton
        android:id="@+id/btnKembali"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/white"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/blackTextTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnKembali"
        android:gravity="center"
        android:text="@string/detail_transaksi"
        app:layout_constraintBottom_toBottomOf="@+id/btnKembali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnKembali" />

    <TextView
        android:id="@+id/textView1"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKembali" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="6dp"
        android:padding="15dp"
        android:background="@drawable/style_tv_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tgl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama" />

    <TextView
        android:id="@+id/tvTanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:layout_marginTop="6dp"
        android:padding="15dp"
        android:background="@drawable/style_tv_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nominal_rp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTanggal" />

    <TextView
        android:id="@+id/tvNominal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_tv_outline"
        android:padding="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/saldo2"
        app:layout_constraintEnd_toStartOf="@+id/imgX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <ImageView
        android:id="@+id/imgX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_x"
        app:layout_constraintBottom_toBottomOf="@+id/tvNominal"
        app:layout_constraintEnd_toStartOf="@+id/tvQty"
        app:layout_constraintTop_toTopOf="@+id/tvNominal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jumlah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTanggal" />

    <TextView
        android:id="@+id/tvQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_tv_outline"
        android:padding="15dp"
        android:text="@string/jumlah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jumlah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTanggal" />

    <TextView
        android:id="@+id/textView"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNominal" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_tv_outline"
        android:padding="15dp"
        android:text="@string/saldo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView6"
        style="@style/blackTextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/catatan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

    <TextView
        android:id="@+id/tvCatatan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_tv_outline"
        android:padding="15dp"
        android:text="@string/catatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>